// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetSearch.vue [Empty Search Input]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value=""
  />
   
  <div
    class="asset-list asset-search-list"
  >
    <recycle-scroller
      buffer="NaN"
      class="asset-list-inner"
      item-size="NaN"
      items="[object Object]"
      key-field="address"
      style="margin-right: 0px;"
    />
     
    <div
      class="scrollbar asset-list-scrollbar"
    >
      <div
        class="thumb"
        style="transform: translateY(0%); height: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`AddAssetSearch.vue [No Tokens Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="123456"
  />
   
  <div
    class="asset-list asset-search-list"
  >
    <recycle-scroller
      buffer="NaN"
      class="asset-list-inner"
      item-size="NaN"
      items=""
      key-field="address"
      style="margin-right: 0px;"
    />
     
    <div
      class="scrollbar asset-list-scrollbar"
    >
      <div
        class="thumb"
        style="transform: translateY(0%); height: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`AddAssetSearch.vue [Token is Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="TEST"
  />
   
  <div
    class="asset-list asset-search-list"
  >
    <recycle-scroller
      buffer="NaN"
      class="asset-list-inner"
      item-size="NaN"
      items="[object Object]"
      key-field="address"
      style="margin-right: 0px;"
    />
     
    <div
      class="scrollbar asset-list-scrollbar"
    >
      <div
        class="thumb"
        style="transform: translateY(0%); height: 0%;"
      />
    </div>
  </div>
</div>
`;
